added basics for storage with minio
