# src/index.js
@@ -1,6 +1,8 @@
 const express = require("express");
 const cors = require("cors");
 const helmet = require("helmet");
+const multer = require("multer");
+const upload = multer({ dest: "/tmp/atlas/uploads" });
 const core = require("./bind")();
 
 const app = express();
@@ -8,11 +10,13 @@ const port = process.env.PORT || 6363;
 
 const cache = require("./api/cache");
 const data = require("./api/data");
+const storage = require("./api/storage");
 
 // middleware to inject core modules into request object
 const bindCore = (req, res, next) => {
   req.cache = core.cache;
   req.data = core.data;
+  req.storage = core.storage;
   next();
 };
 
@@ -40,7 +44,14 @@ app.get("/cache/:name/:key", bindCore, cache.getDocument);
 app.put("/cache/:name/:key", express.json(), bindCore, cache.updateDocument);
 app.delete("/cache/:name/:key", bindCore, cache.deleteDocument);
 
-//app.use("/micro/storage", require("./api/storage"));
+// storage api
+app.get("/storage", storage.index);
+app.put("/storage/:name", bindCore, storage.makeBucket);
+app.delete("/storage/:name", bindCore, storage.removeBucket);
+app.post("/storage/:name", upload.single("file"), bindCore, storage.putObject);
+app.get("/storage/:name/*", bindCore, storage.getObject);
+app.delete("/storage/:name/*", bindCore, storage.removeObject);
+
 //app.use("/micro/hooks", require("./api/hooks"));
 
 app.get("/", (req, res) => res.send({ name: "Atlas" }));
